--- a/modules/core/src/com/company/cubavisionclinic/app.properties
+++ b/modules/core/src/com/company/cubavisionclinic/app.properties
@@ -18,7 +18,7 @@
 #                              Configuration                                  #
 ###############################################################################
 
-cuba.dbmsType = hsql
+cuba.dbmsType = mssql
 
 cuba.springContextConfig = +com/company/cubavisionclinic/spring.xml
 
@@ -41,3 +41,4 @@ cuba.anonymousSessionId = 1db74df5-9729-7821-fcf2-e7d20336ce40
 cuba.webContextName = app-core
 cuba.availableLocales = English|en
 cuba.localeSelectVisible = false
+cuba.dbmsVersion = 2012
